--- a/locales/ru.json
+++ b/locales/ru.json
@@ -140,16 +140,82 @@
     "service-gbo-list-card41": "Гарантия на регистрацию",
     "service-gbo-list-card42": "Полный пакет документов",
     "hero-service-title": "УСЛУГИ НА АВТОСЕРВИСЕ «КАСКАД»",
-    "service": "Регистрация",
-    "service": "Регистрация",
-    "service": "Регистрация",
-    "service": "Регистрация",
-    "service": "Регистрация",
-    "service": "Регистрация",
-    "service": "Регистрация",
-    "service": "Регистрация",
-    "service": "Регистрация",
-    "service": "Регистрация",
-    "service": "Регистрация",
-    "service": "Регистрация"
+    "price-content1": "Высококачественная станция технического обслуживания – это симбиоз современного подхода к управлению процессами и высокой квалификации сотрудников. Коллектив автосервиса АС КАСКАД накопил богатый опыт выполнения работ по диагностике, ремонту, и техническому обслуживанию автомобилей. И мы не останавливаемся на достигнутом, продолжаем оттачивать свое мастерство и постоянно улучшаем качество оказываемых услуг. СТО оснащена современным диагностическим оборудованием и инструментом для ремонта автомобилей, также мы имеем доступ к обширной базе технической информации и руководств по ремонту.",
+    "price-content2": "Для максимального удобства клиентов и оптимизации сроков выполнения работ всегда в наличии большой ассортимент технических жидкостей и смазочных материалов. Прямые поставки запчастей от официальных дилеров и импортеров — как подтверждение серьезного подхода к управлению автосервисом. Если необходимой запчасти в наличии нет, то обязательно закажем ее у партнеров. Менеджеры нашего автосервиса призваны обеспечить связь с клиентом, и всегда готовы ответить в понятной и открытой форме на любые вопросы, которые Вас интересуют. Мы ничего не скрываем, и готовы обеспечить доступ в ремзону в любой момент.",
+    "item-service-catalog-dvig": "Двигатель",
+    "item-service-catalog-hodov": "Ходовая часть",
+    "item-service-catalog-electro": "Электрика",
+    "item-service-catalog-tormoznaja": "Тормозная система",
+    "item-service-catalog-transm": "Трансмисия",
+    "item-service-catalog-servisnoe": "Техническое обслуживание",
+    "item-service-catalog-kondi": "Обслуживание кондиционеров",
+    "catalog-description-dvig": "Диагностика и ремонт двигателя внутреннего сгорания.",
+    "catalog-description-hodov": "Диагностика и ремонт автомобильной подвески.",
+    "catalog-description-electro": "Компьютерная диагностика, ремонт электропроводки и электрических блоков управления.",
+    "catalog-description-tormoznaja": "Диагностика, ремонт и обслуживание тормозной системы.",
+    "catalog-description-transm": "Диагностика и ремонт элементов трансмиссии, замена сцепления.",
+    "catalog-description-servisnoe": "Интервальное обслуживание автомобилей Замена масел, фильтров, свечей зажигания, технических жидкостей.",
+    "catalog-description-kondi": "Заправка и замена хладагента, промывка системы, замена фильтра-осушителя, диагностика давления, проверка герметичности, очистка испарителя и дезинфекция системы кондиционирования.",
+    "catalog-text-dvig1": "Ремонт двигателя Ауди А5",
+    "catalog-text-dvig2": "Ремонт двигателя Ауди А4",
+    "catalog-text-dvig3": "Замена цепи ГРМ на Ниссан Мурано Z51",
+    "catalog-text-dvig4": "Ремонт двигателя Mitsubishi Outlander",
+    "catalog-text-dvig5": "Замена маховика Skoda Yeti",
+    "catalog-text-dvig6": "Ремонт двигателя Volkswagen Passat B7",
+    "catalog-text-hodov1": "Замена нижних с/б Ford",
+    "catalog-text-hodov2": "Ремонт сайлентблока Nissan Qashqai",
+    "catalog-text-hodov3": "Замена сальника привода КПП Nissan",
+    "catalog-text-hodov4": "Замена пружин Nissan Note",
+    "catalog-text-hodov5": "Замена сальника привода и стоек стабилизатора Pego",
+    "catalog-text-hodov6": "Замена амортизаторов Volkswagen Tiguan",
+    "catalog-text-electro1": "Подбор и замена АКП на Dodge",
+    "catalog-text-electro2": "Процесс снятия генератора на Reno Duster",
+    "catalog-text-electro3": "Процесс монтирования сигнализации на Ауди",
+    "catalog-text-electro4": "Замена генератора на лансер 9",
+    "catalog-text-electro5": "Ремонт приборной панели на Фольцваген",
+    "catalog-text-tormoznaja1": "Замена передней тормозной системы на Reno Logan",
+    "catalog-text-tormoznaja2": "Ремонт тормозной системы",
+    "catalog-text-tormoznaja3": "Замена колодок на Mitsubisi Lancer 10",
+    "catalog-text-tormoznaja4": "Замена колодок",
+    "catalog-text-tormoznaja5": "Замена колодок",
+    "catalog-text-tormoznaja6": "Замена тормозных шлангов",
+    "catalog-text-transm1": "Ремонт АКПП Шкода Октавия",
+    "catalog-text-transm2": "Замена кардана на Рено Дастер",
+    "catalog-text-transm3": "Замена сцепления на Логан",
+    "catalog-text-transm4": "Замена сцепления на Смарт",
+    "catalog-text-transm5": "Замена сцепления на Toyota Yaris",
+    "catalog-text-servisnoe1": "Замена фильтра салона",
+    "catalog-text-servisnoe2": "Замена масла в коробке передач",
+    "catalog-text-servisnoe3": "Замена и регулировка ремня ГРБ",
+    "catalog-text-servisnoe4": "Замена воздушного фильтра",
+    "catalog-text-servisnoe5": "Замена масла в двигателе",
+    "catalog-text-kondi1": "Диагностика автомобильных компрессоров",
+    "catalog-text-kondi2": "Замена автомобильных компрессоров",
+    "catalog-text-kondi3": "Проверка давление и устранение вытока фриона",
+    "catalog-text-kondi4": "Заправка фрионом",
+    "catalog-text-kondi5": "Антибактериальная обработка дифлекторов",
+    "hero-title-price": "Прайс-лист автосервиса «КАСКАД»",
+    "price-content-1": "Представляем Вашему вниманию актуальный прайс-лист автосервиса «АС КАСКАД» в Павлограде. Мы специализируемся на полном спектре услуг по ремонту и обслуживанию автомобилей всех марок. В этом перечне собраны наиболее популярные виды работ, отобранные на основе нашего многолетнего опыта и реальных запросов клиентов.",
+    "price-content-2": "Здесь Вы найдёте основные услуги по диагностике, техническому обслуживанию и ремонту автомобильных узлов и агрегатов. Если нужной Вам услуги нет в списке – просто позвоните нам по телефонам +38 (066) 837 56 66 или +38 (096) 211 02 10. Наши специалисты всегда готовы проконсультировать и предложить оптимальное решение для Вашего автомобиля.",
+    "work-title": "Процесс работы",
+    "work-subtitle": "Техническое обслуживание и ремонт автомобилей, проведение диагностики",
+    "work-card1": "Двигатель",
+    "work-card2": "Ходовая часть",
+    "work-card3": "Электрика",
+    "work-card4": "Тормозная система",
+    "work-card5": "Трансмиссия",
+    "work-card6": "Техническое обслуживание",
+    "work-card7": "Обслуживаются марки",
+    "work-card8": "Диагностика",
+    "work-card9": "Программное тюнингование",
+    "work-card-content1": "Комплексная диагностика и ремонт двигателей любой сложности. От компьютерной диагностики ошибок капитального ремонта.",
+    "work-card-content2": "Диагностика и ремонт подвески, замена амортизаторов, сайлентблоков, шаровых опор, рулевых тяг, ремонт подшипников ступиц.",
+    "work-card-content3": "Диагностика и ремонт электросистем автомобиля, замена генераторов, стартеров, аккумуляторов, ремонт проводки, установка дополнительного оборудования.",
+    "work-card-content4": "Полная диагностика тормозов, замена колодок, дисков, тормозных цилиндров, прокачка тормозной системы, ремонт ABS.",
+    "work-card-content5": "Ремонт КПП (механических и автоматических), замена сцепления, ремонт приводов, замена трансмиссионной жидкости.",
+    "work-card-content6": "Плановое ТО: замена масла и фильтров, проверка технического состояния, замена жидкостей, компьютерная диагностика.",
+    "work-card-content7": "Обслуживаем все европейские, азиатские и американские автомобили. Специализируемся на VAG, BMW, Mercedes, Toyota, Hyundai-Kia.",
+    "work-card-content8": "Компьютерная диагностика, проверка двигателя, ходовой, электросистемы. Выявление неисправностей с помощью профессионального оборудования.",
+    "work-card-content9": "Оптимизация работы двигателя, увеличение мощности, экономия топлива. Программная настройка ЭБУ для улучшения характеристик авто."
+ 
   }
