--- a/locales/uk.json
+++ b/locales/uk.json
@@ -139,5 +139,82 @@
     "service-gbo-h3-card4": "Реєстрація в МРЕВ",
     "service-gbo-list-card41": "Гарантія на реєстрацію",
     "service-gbo-list-card42": "Повний пакет документів",
-    "hero-service-title": "ПОСЛУГИ НА АВТОСЕРВІСІ «КАСКАД»"
+    "hero-service-title": "ПОСЛУГИ НА АВТОСЕРВІСІ «КАСКАД»",
+    "price-content1": "Високоякісна станція технічного обслуговування – це симбіоз сучасного підходу до управління процесами та високої кваліфікації працівників. Колектив автосервісу АС КАСКАД накопичив багатий досвід виконання робіт з діагностики, ремонту та технічного обслуговування автомобілів. І ми не зупиняємося на досягнутому, продовжуємо відточувати свою майстерність і постійно покращуємо якість послуг. СТО оснащена сучасним діагностичним обладнанням та інструментом для ремонту автомобілів, також ми маємо доступ до великої бази технічної інформації та посібників з ремонту.",
+    "price-content2": "Для максимальної зручності клієнтів та оптимізації термінів виконання робіт завжди є великий асортимент технічних рідин та мастильних матеріалів. Прямі поставки запчастин від офіційних дилерів та імпортерів - як підтвердження серйозного підходу до керування автосервісом. Якщо необхідної запчастини немає, то обов'язково замовимо її у партнерів. Менеджери нашого автосервісу покликані забезпечити зв'язок із клієнтом, і завжди готові відповісти у зрозумілій та відкритій формі на будь-які питання, які Вас цікавлять.",
+    "item-service-catalog-dvig": "Двигун",
+    "item-service-catalog-hodov": "Ходова частина",
+    "item-service-catalog-electro": "Електрика",
+    "item-service-catalog-tormoznaja": "Гальмівна система",
+    "item-service-catalog-transm": "Трансмісія",
+    "item-service-catalog-servisnoe": "Технічне обслуговування",
+    "item-service-catalog-kondi": "Обслуговування кондиціонерів",
+    "catalog-description-dvig": "Діагностика та ремонт двигуна внутрішнього згорання.",
+    "catalog-description-hodov": "Діагностика та ремонт автомобільної підвіски.",
+    "catalog-description-electro": "Компьютерна діагностика, ремонт електропроводки та електричних блоків керування.",
+    "catalog-description-tormoznaja": "Діагностика, реммонт і обслуговування гальмівної системи.",
+    "catalog-description-transm": "Діагностика та ремонт елементів трансмісії, заміна зчеплення.",
+    "catalog-description-servisnoe": "Інтервальне обслуговування автомобілів Заміна масел, фільтрів, свічок запалювання, технічних рідин.",
+    "catalog-description-kondi": "Заправка та заміна хладагенту, промивка системи, заміна фільтра-осушувача, діагностика тиску, перевірка герметичності, очищення випарника та дезінфекція системи кондиціонування.",
+    "catalog-text-dvig1": "Ремонт двигуна Ауді А5",
+    "catalog-text-dvig2": "Ремонт двигуна Ауди А4",
+    "catalog-text-dvig3": "Заміна ланцюга ГРМ на Ниссан Мурано Z51",
+    "catalog-text-dvig4": "Ремонт двигуна Mitsubishi Outlander",
+    "catalog-text-dvig5": "Заміна маховика Skoda Yeti",
+    "catalog-text-dvig6": "Ремонт двигуна Volkswagen Passat B7",
+    "catalog-text-hodov1": "Заміна нижних с/б Ford",
+    "catalog-text-hodov2": "Ремонт сайлентблоку Nissan Qashqai",
+    "catalog-text-hodov3": "Заміна сальника приводу КПП Nissan",
+    "catalog-text-hodov4": "Заміна пружин Nissan Note",
+    "catalog-text-hodov5": "Заміна сальника приводу та стійок стабілізатора Pego",
+    "catalog-text-hodov6": "Заміна амортизаторів Volkswagen Tiguan",
+    "catalog-text-electro1": "Підбір та заміна АКП на Dodge",
+    "catalog-text-electro2": "Процес зняття генератора на Reno Duster",
+    "catalog-text-electro3": "Процес монтування сигналізації на Audi",
+    "catalog-text-electro4": "Заміна генератора на лансер 9",
+    "catalog-text-electro5": "Ремонт приладової панелі на Фольцваген",
+    "catalog-text-tormoznaja1": "Заміна передньої гальмівної системи на Reno Logan",
+    "catalog-text-tormoznaja2": "Ремонт гальмівної системи",
+    "catalog-text-tormoznaja3": "Заміна колодок на Mitsubisi Lancer 10",
+    "catalog-text-tormoznaja4": "Заміна колодок",
+    "catalog-text-tormoznaja5": "Заміна колодок",
+    "catalog-text-tormoznaja6": "Заміна гальмівних шлангів",
+    "catalog-text-transm1": "Ремонт АКПП Шкода Октавія",
+    "catalog-text-transm2": "Заміна кардану на Рено Дастер",
+    "catalog-text-transm3": "Заміна зчеплення на Логан",
+    "catalog-text-transm4": "Заміна зчеплення на Смарт",
+    "catalog-text-transm5": "Заміна зчеплення на Toyota Yaris",
+    "catalog-text-servisnoe1": "Заміна фільтра салону",
+    "catalog-text-servisnoe2": "Заміна олії в коробці передач",
+    "catalog-text-servisnoe3": "Заміна та регулювання ременя ГРБ",
+    "catalog-text-servisnoe4": "Заміна повітряного фільтра",
+    "catalog-text-servisnoe5": "Заміна олії у двигуні",
+    "catalog-text-kondi1": "Діагностика автомобільних компресорів",
+    "catalog-text-kondi2": "Заміна автомобільних компресорів",
+    "catalog-text-kondi3": "Перевірка тиску та усунення витоку фріону",
+    "catalog-text-kondi4": "Заправка фріоном",
+    "catalog-text-kondi5": "Антибактеріальна обробка дифлекторів",
+    "hero-title-price": "Прайс-лист автосервісу «КАСКАД»",
+    "price-content-1": "Представляємо Вашій увазі актуальний прайс-лист автосервісу «АС КАСКАД» у Павлограді. Ми спеціалізуємося на повному спектрі послуг з ремонту та обслуговування автомобілів усіх марок. У цьому переліку зібрані найпопулярніші види робіт, відібрані на основі нашого багаторічного досвіду та реальних запитів клієнтів.",
+    "price-content-2": "Тут Ви знайдете основні послуги з діагностики, технічного обслуговування та ремонту автомобільних вузлів та агрегатів. Якщо потрібної послуги немає у списку – просто зателефонуйте нам за телефонами +38 (066) 837 56 66 або +38 (096) 211 02 10. Наші фахівці завжди готові проконсультувати та запропонувати оптимальне рішення для Вашого автомобіля.",
+    "work-title": "Процес роботи",
+    "work-subtitle": "Технічне обслуговування та ремонт автомобілів, проведення діагностики",
+    "work-card1": "Двигун",
+    "work-card2": "Ходова частина",
+    "work-card3": "Електрика",
+    "work-card4": "Гальмівна система",
+    "work-card5": "Трансмісія",
+    "work-card6": "Технічне обслуговування",
+    "work-card7": "Обслуговуються марки",
+    "work-card8": "Діагностика",
+    "work-card9": "Програмне тюнінгування",
+    "work-card-content1": "Комплексна діагностика та ремонт двигунів будь-якої складності. Від комп'ютерної діагностики помилок капітального ремонту.",
+    "work-card-content2": "Діагностика та ремонт підвіски, заміна амортизаторів, сайлентблоків, кульових опор, рульових тяг, ремонт підшипників ступиць.",
+    "work-card-content3": "Діагностика та ремонт електросистем автомобіля, заміна генераторів, стартерів, акумуляторів, ремонт проводки, установка додаткового обладнання.",
+    "work-card-content4": "Повна діагностика гальм, заміна колодок, дисків, гальмівних циліндрів, прокачування гальмівної системи, ремонт ABS.",
+    "work-card-content5": "Ремонт КПП (механічних та автоматичних), заміна зчеплення, ремонт приводів, заміна трансмісійної рідини.",
+    "work-card-content6": "Планове ТО: заміна оливи та фільтрів, перевірка технічного стану, заміна рідин, комп'ютерна діагностика.",
+    "work-card-content7": "Обслуговуємо всі європейські, азіатські та американські автомобілі. Спеціалізуємося на VAG, BMW, Mercedes, Toyota, Hyundai-Kia.",
+    "work-card-content8": "Комп'ютерна діагностика, перевірка двигуна, ходової, електросистем. Виявлення несправностей за допомогою професійного обладнання.",
+    "work-card-content9": "Оптимізація роботи двигуна, збільшення потужності, економія палива. Програмне налаштування ЕБУ для покращення характеристик авто."
   }
