--- a/locales/ru.json
+++ b/locales/ru.json
@@ -43,7 +43,7 @@
     "services-h3-7": "РЕМОНТ ТРАНСМИССИИ",
     "services-p-7": "Диагностика и ремонт механических и автоматических коробок передач, редукторов, раздаточных коробок.",
     "services-h3-8": "ОБСЛУЖИВАНИЕ ТОРМОЗНОЙ СИСТЕМЫ",
-    "services-p-8": "Замена тормозной жидкости, прокачка тормозной системы, диагностика тормозных колодок и дисков, проверка работы ABS, замена тормозных суппортов и ремонт гидравлической части тормозной системы.",
+    "services-p-8": "Замена тормозной жидкости, прокачка тормозной системы, диагностика тормозных колодок и дисков, проверка работы ABS, замена тормозных суппортов.",
     "services-h3-9": "ОБСЛУЖИВАНИЕ КОНДИЦИОНЕРА",
     "services-p-9": "Заправка та заміна хладагенту, промивка системи, заміна фільтра-осушувача, діагностика тиску, перевірка герметичності, очищення випарника та дезінфекція системи кондиціонування.",
     "details-btn": "ПОДРОБНЕЕ",
