--- a/locales/uk.json
+++ b/locales/uk.json
@@ -20,7 +20,7 @@
     "details-hero-btn": "ЗАПИСАТИСЯ",
     "discount": "Знижка 50% на першу діагностику за промокодом: «АС КАСКАД»",
     "hero-contact-div-map": "Їдь до нас прямо зараз:",
-    "hero-contact-div-number": "Чекаєм на твій дзвінок:",
+    "hero-contact-div-number": "Чекаємо на твій дзвінок:",
     "main-content-title": "Автосервіс Каскад у Павлограді – надійний партнер для Вашого автомобіля вже понад 20 років:",
     "main-content-txt1": "Коли Вашому автомобілю потрібна увага, важливо довірити його тим, хто знає свою справу. Автосервіс «Каскад» працює у Павлограді з 2005 року, і за цей час ми заслужили репутацію надійного та професійного сервісу, здатного вирішити будь-яке завдання – від простого технічного обслуговування до складного ремонту.",
     "main-content-txt2": "Наш досвід – це тисячі відремонтованих автомобілів, задоволені клієнти та впевненість у тому, що ми впораємося навіть із неочевидними труднощами. Ми не просто змінюємо деталі – ми знаходимо причину проблеми та усуваємо її, щоб Ваш автомобіль служив вам довго та безвідмовно. У нашому розпорядженні сучасне обладнання, якісні запчастини та команда майстрів, які справді розбираються у своїй справі.",
@@ -43,7 +43,7 @@
     "services-h3-7": "РЕМОНТ ТРАНСМІСІЇ",
     "services-p-7": "Діагностика та ремонт механічних та автоматичних коробок передач, редукторів, роздавальних коробок.",
     "services-h3-8": "ОБСЛУГОВУВАННЯ ГАЛЬМІВНОЇ СИСТЕМИ",
-    "services-p-8": "Заміна гальмівної рідини, прокачування гальмівної системи, діагностика гальмівних колодок та дисків, перевірка роботи ABS, заміна гальмівних супортів та ремонт гідравлічної частини гальмівної системи.",
+    "services-p-8": "Заміна гальмівної рідини, прокачування гальмівної системи, діагностика гальмівних колодок та дисків, перевірка роботи ABS, заміна гальмівних супортів.",
     "services-h3-9": "ОБСЛУГОВУВАННЯ КОНДИЦІОНЕРУ",
     "services-p-9": "Заправка та заміна хладагенту, промивка системи, заміна фільтра-осушувача, діагностика тиску, перевірка герметичності, очищення випарника та дезінфекція системи кондиціонування.",
     "details-btn": "ДЕТАЛЬНІШЕ",
@@ -57,7 +57,7 @@
     "benefits-bot-text3": "«Ваше авто не затримається у нас довше за необхідне.»",
     "main-content-title1": "Автосервіс «Каскад» у Павлограді – це професійний догляд Вашого автомобіля.",
     "main-content-txt01": "Ми пропонуємо комплексний підхід до обслуговування автомобілів: від якісних запчастин та технічних рідин до професійного ремонту будь-якої складності. За 20 років ми сформували надійну мережу постачальників, співпрацюючи з офіційними дистриб'юторами. Це дозволяє нам гарантувати якість деталей та надавати гарантію на всі види робіт. Наші фахівці підберуть оптимальні рішення щодо співвідношення ціни та якості, допомагаючи Вам економити без шкоди для результату. Детальніше про запчастини Ви можете дізнатись у відповідному розділі сайту.",
-    "main-content-txt02": "Вибираючи «Каскад», Ви отримуєте не просто ремонт, а чесний сервіс, уважне ставлення та гарантований результат. Ми працюємо з автомобілями так само дбайливо, як з власними, так і повністю відповідаємо за якість наших послуг. У спірних ситуаціях ми завжди йдемо назустріч клієнту. Пропонуємо гнучку систему знижок, приймаємо як готівковий, так і безготівковий розрахунок. Наші фахівці безкоштовно проконсультують Вас з будь-яких питань, пов'язаних з обслуговуванням та ремонтом, і зроблять все, щоб Ви залишилися задоволеними!",
+    "main-content-txt02": "Обираючи «Каскад», Ви отримуєте не просто ремонт, а чесний сервіс, уважне ставлення та гарантований результат. Ми працюємо з автомобілями так само дбайливо, як з власними, так і повністю відповідаємо за якість наших послуг. У спірних ситуаціях ми завжди йдемо назустріч клієнту. Пропонуємо гнучку систему знижок, приймаємо як готівковий, так і безготівковий розрахунок. Наші фахівці безкоштовно проконсультують Вас з будь-яких питань, пов'язаних з обслуговуванням та ремонтом, і зроблять все, щоб Ви залишилися задоволеними!",
     "main-content-title2": "Комплексний ремонт та обслуговування автомобілів",
     "main-content-txt03": "Кожному автовласнику рано чи пізно доводиться стикатися з необхідністю ремонту - чи то планове ТО, чи серйозне відновлення вузлів автомобіля. Це природно: у процесі експлуатації всі механізми зазнають зносу. При цьому навіть машини, які довго стоять без руху, вимагають уваги – деталі можуть пересихати, а рідини втрачати свої властивості. Регулярно використовуваним автомобілям професійне обслуговування потрібно ще частіше - тільки так можна уникнути несподіваних поломок та дорогого ремонту.",
     "main-content-txt04": "Автосервіс Каскад пропонує повний спектр послуг для автомобілів будь-яких марок. Якими б не були причини Вашого візиту – ми готові допомогти!",
