--- a/locales/ru.json
+++ b/locales/ru.json
@@ -11,6 +11,7 @@
     "nav-item-torm": "Тормозная система",
     "nav-item-trans": "Трансмисия",
     "nav-item-to": "Техническое обслуживание",
+    "nav-item-contacts": "Контакты",
     "nav-item-diagn": "Диагностика",
     "nav-item-chip": "Програмный тюнинг",
     "nav-item-price": "Цены",
@@ -216,6 +217,6 @@
     "work-card-content6": "Плановое ТО: замена масла и фильтров, проверка технического состояния, замена жидкостей, компьютерная диагностика.",
     "work-card-content7": "Обслуживаем все европейские, азиатские и американские автомобили. Специализируемся на VAG, BMW, Mercedes, Toyota, Hyundai-Kia.",
     "work-card-content8": "Компьютерная диагностика, проверка двигателя, ходовой, электросистемы. Выявление неисправностей с помощью профессионального оборудования.",
-    "work-card-content9": "Оптимизация работы двигателя, увеличение мощности, экономия топлива. Программная настройка ЭБУ для улучшения характеристик авто."
- 
+    "work-card-content9": "Оптимизация работы двигателя, увеличение мощности, экономия топлива. Программная настройка ЭБУ для улучшения характеристик авто.",
+    "hero-title-contacts": "РАБОТАЕМ В ПАВЛОГРАДЕ БОЛЕЕ 20 ЛЕТ" 
   }
