--- a/locales/uk.json
+++ b/locales/uk.json
@@ -8,6 +8,7 @@
     "nav-item-dvig": "Двигун",
     "nav-item-hodov": "Ходова частина",
     "nav-item-elektro": "Електрика",
+    "nav-item-contacts": "Контакти",
     "nav-item-torm": "Гальмівна система",
     "nav-item-trans": "Трансмісія",
     "nav-item-to": "Технічне обслуговування",
@@ -216,5 +217,6 @@
     "work-card-content6": "Планове ТО: заміна оливи та фільтрів, перевірка технічного стану, заміна рідин, комп'ютерна діагностика.",
     "work-card-content7": "Обслуговуємо всі європейські, азіатські та американські автомобілі. Спеціалізуємося на VAG, BMW, Mercedes, Toyota, Hyundai-Kia.",
     "work-card-content8": "Комп'ютерна діагностика, перевірка двигуна, ходової, електросистем. Виявлення несправностей за допомогою професійного обладнання.",
-    "work-card-content9": "Оптимізація роботи двигуна, збільшення потужності, економія палива. Програмне налаштування ЕБУ для покращення характеристик авто."
+    "work-card-content9": "Оптимізація роботи двигуна, збільшення потужності, економія палива. Програмне налаштування ЕБУ для покращення характеристик авто.",
+    "hero-title-contacts": "ПРАЦЮЄМО У ПАВЛОГРАДІ БІЛЬШ 20 РОКІВ"
   }
