--- a/locales/uk.json
+++ b/locales/uk.json
@@ -15,7 +15,7 @@
     "nav-item-diagn": "Діагностика",
     "nav-item-chip": "Програмне тюнінгування",
     "nav-item-price": "Ціни",
-    "hero-content-1": "Краще співвіднощення ціна/якість.",
+    "hero-content-1": "Краще співвідношення ціна/якість.",
     "hero-content-2": "Гарантія на всі типи послуг.",
     "hero-content-3": "Оригінальні запчастини.",
     "details-hero-btn": "ЗАПИСАТИСЯ",
