--- a/locales/ru.json
+++ b/locales/ru.json
@@ -197,8 +197,8 @@
     "catalog-text-kondi4": "Заправка фрионом",
     "catalog-text-kondi5": "Антибактериальная обработка дифлекторов",
     "hero-title-price": "Прайс-лист автосервиса «КАСКАД»",
-    "price-content-1": "Представляем Вашему вниманию актуальный прайс-лист автосервиса «АС КАСКАД» в Павлограде. Мы специализируемся на полном спектре услуг по ремонту и обслуживанию автомобилей всех марок. В этом перечне собраны наиболее популярные виды работ, отобранные на основе нашего многолетнего опыта и реальных запросов клиентов.",
-    "price-content-2": "Здесь Вы найдёте основные услуги по диагностике, техническому обслуживанию и ремонту автомобильных узлов и агрегатов. Если нужной Вам услуги нет в списке – просто позвоните нам по телефонам +38 (066) 837 56 66 или +38 (096) 211 02 10. Наши специалисты всегда готовы проконсультировать и предложить оптимальное решение для Вашего автомобиля.",
+    "price-content-1": "Представляем вашему вниманию актуальный прайс-лист автосервиса «АС КАСКАД» в Павлограде. Наша станция технического обслуживания более 20 лет специализируется на полном спектре услуг по ремонту и обслуживанию автомобилей всех марок – от легковых до коммерческих. Мы выполняем профессиональную компьютерную диагностику, техническое обслуживание, замену масел и фильтров, ремонт ходовой части и тормозной системы, установку и сервисное обслуживание ГБО, а также ремонт и заправку автомобильных кондиционеров.",
+    "price-content-2": "Здесь вы найдете основные услуги по диагностике авто, техническому обслуживанию, ремонту двигателя, подвески, тормозной системы и установке газобаллонного оборудования. Если нужной услуги нет в списке – просто позвоните нам по телефонам +38 (066) 837 56 66 или +38 (096) 211 02 10. Менеджеры автосервиса «АС КАСКАД» всегда готовы предоставить профессиональную консультацию, ответить на все ваши вопросы и предложить оптимальное решение для любого автомобиля.",
     "work-title": "Процесс работы",
     "work-subtitle": "Техническое обслуживание и ремонт автомобилей, проведение диагностики",
     "work-card1": "Двигатель",
