--- a/locales/uk.json
+++ b/locales/uk.json
@@ -197,8 +197,8 @@
     "catalog-text-kondi4": "Заправка фріоном",
     "catalog-text-kondi5": "Антибактеріальна обробка дифлекторів",
     "hero-title-price": "Прайс-лист автосервісу «КАСКАД»",
-    "price-content-1": "Представляємо Вашій увазі актуальний прайс-лист автосервісу «АС КАСКАД» у Павлограді. Ми спеціалізуємося на повному спектрі послуг з ремонту та обслуговування автомобілів усіх марок. У цьому переліку зібрані найпопулярніші види робіт, відібрані на основі нашого багаторічного досвіду та реальних запитів клієнтів.",
-    "price-content-2": "Тут Ви знайдете основні послуги з діагностики, технічного обслуговування та ремонту автомобільних вузлів та агрегатів. Якщо потрібної послуги немає у списку – просто зателефонуйте нам за телефонами +38 (066) 837 56 66 або +38 (096) 211 02 10. Наші фахівці завжди готові проконсультувати та запропонувати оптимальне рішення для Вашого автомобіля.",
+    "price-content-1": "Представляємо вашій увазі актуальний прайс-лист автосервісу «АС КАСКАД» у Павлограді. Наша станція технічного обслуговування понад 20 років спеціалізується на повному спектрі послуг з ремонту та обслуговування автомобілів усіх марок – від легкових до комерційних. Ми виконуємо якісну комп'ютерну діагностику, професійне технічне обслуговування, заміну мастил, ремонт ходової, гальмівної системи, встановлення та сервісне обслуговування ГБО, а також ремонт та заправку автокондиціонерів.",
+    "price-content-2": "Тут ви знайдете основні послуги з діагностики автомобіля, технічного обслуговування, ремонту двигуна, підвіски, гальмівної системи та встановлення газобалонного обладнання. Якщо потрібної послуги немає у списку – просто зателефонуйте нам за телефонами +38 (066) 837 56 66 або +38 (096) 211 02 10. Менеджери автосервісу «АС КАСКАД» завжди готові надати професійну консультацію, відповісти на ваші запитання та запропонувати оптимальне рішення для будь-якої марки та моделі автомобіля.",
     "work-title": "Процес роботи",
     "work-subtitle": "Технічне обслуговування та ремонт автомобілів, проведення діагностики",
     "work-card1": "Двигун",
