--- a/locales/ru.json
+++ b/locales/ru.json
@@ -13,7 +13,7 @@
     "nav-item-to": "Техническое обслуживание",
     "nav-item-contacts": "Контакты",
     "nav-item-diagn": "Диагностика",
-    "nav-item-chip": "Програмный тюнинг",
+    "nav-item-chip": "Автокондиционеры",
     "nav-item-price": "Цены",
     "hero-content-1": "Лучшее соотношение цена/качество.",
     "hero-content-2": "Гарантия на все виды работ.",
