--- a/locales/uk.json
+++ b/locales/uk.json
@@ -13,7 +13,7 @@
     "nav-item-trans": "Трансмісія",
     "nav-item-to": "Технічне обслуговування",
     "nav-item-diagn": "Діагностика",
-    "nav-item-chip": "Програмне тюнінгування",
+    "nav-item-chip": "Автокондиціонери",
     "nav-item-price": "Ціни",
     "hero-content-1": "Краще співвідношення ціна/якість.",
     "hero-content-2": "Гарантія на всі типи послуг.",
